@@ -16,6 +16,7 @@
  + begin work under FSK/OOK modes
 
 2018.02.04
- + first test TX in FSK/OOK packet mode (controll by RTL-SDR)
+ + first test TX in FSK/OOK packet mode (control by RTL-SDR)
+ + first test RX in FSK packet mode
 
 
